[gd_scene load_steps=13 format=3 uid="uid://bprisrqeam5af"]

[ext_resource type="PackedScene" uid="uid://bbqpi3sm116fw" path="res://attack.tscn" id="1_anm1j"]
[ext_resource type="Script" path="res://rock_monster.gd" id="1_uvevy"]
[ext_resource type="Texture2D" uid="uid://dr8lq1ybrhygl" path="res://417241531_918965542693028_8760369013922564419_n.png" id="2_m8fvs"]
[ext_resource type="PackedScene" uid="uid://chvovdue55bs2" path="res://block.tscn" id="3_2x0yn"]
[ext_resource type="PackedScene" uid="uid://dww1it18vot51" path="res://tickle_point.tscn" id="4_b3vbe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is5sp"]

[sub_resource type="Animation" id="Animation_w3r5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kong:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wpfan"]
resource_name = "attack_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kong:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_dvi3n"]
resource_name = "attack_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kong:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_pp0uo"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kong:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lfm6y"]
resource_name = "laugh"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kong:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grhli"]
_data = {
"RESET": SubResource("Animation_w3r5v"),
"attack_left": SubResource("Animation_wpfan"),
"attack_right": SubResource("Animation_dvi3n"),
"idle": SubResource("Animation_pp0uo"),
"laugh": SubResource("Animation_lfm6y")
}

[node name="RockMonster" type="CharacterBody2D" node_paths=PackedStringArray("tickle")]
script = ExtResource("1_uvevy")
tickle = [NodePath("TicklePoint"), NodePath("TicklePoint2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_is5sp")

[node name="Attack" parent="." instance=ExtResource("1_anm1j")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grhli")
}

[node name="Kong" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m8fvs")
hframes = 5

[node name="Block" parent="." instance=ExtResource("3_2x0yn")]

[node name="TicklePoint" parent="." instance=ExtResource("4_b3vbe")]
offset_left = -97.0
offset_top = -7.0
offset_right = -75.0
offset_bottom = 13.0

[node name="TicklePoint2" parent="." instance=ExtResource("4_b3vbe")]
offset_left = 57.0
offset_top = -6.0
offset_right = 76.0
offset_bottom = 15.0

[connection signal="attackEnemy" from="Attack" to="." method="_on_attack_attack_enemy"]
